# hft_polymarket_bot

./: .gitignore  BLOCKING_CALL_ELIMINATION_PLAN.md  LIVE_PAPER_GAP_ANALYSIS.md  LIVE_PAPER_GAP_ANALYSIS_V2.md  MEDIAN_CALCULATION_IMPLEMENTATION.md  PERFORMANCE_MIGRATION_ANALYSIS.md  PLAN.MD  PROD_SETUP.md  README.md  README_HFT.MD  README_LIVE.md  WEBSOCKET_MIGRATION_PHASE2.md  WEBSOCKET_MIGRATION_PHASE2_IMPLEMENTATION.md  WEBSOCKET_MIGRATION_PHASE3_IMPLEMENTATION.md  ZSCORE_MONOTONIC_FILTER_CHANGES.md  architecture.md  bot.py  bot_config_log.py  bot_main_loop.py  bot_runtime.py  hft_bot_report_arch.md  pyproject.toml  test_median_calc.py
config/: runtime.b1163a53.env  runtime.env  runtime_day.env  runtime_live.env  runtime_night.env  sim_slippage.env
core/: engine.py  engine_entry_candidates.py  engine_entry_gates.py  engine_price.py  engine_rsi_exit.py  engine_sizing.py  engine_trend.py  executor.py  kill_switch_server.py  live_common.py  live_engine.py  live_position_manager.py  market_phase.py  market_regime.py  risk_engine.py  selector.py  session_profile.py  strategy_base.py  strategy_hub.py  strategy_performance.py
data/: aggregator.py  balance_cache.py  clob_market_ws.py  clob_user_ws.py  poly_clob.py  providers.py
docs/: ADX_INCREMENTAL_FIX.md  DEBUG_REFACTOR.md  DEBUG_REFACTOR_REPORT.md  GIT_HISTORY.md  INDICATOR_IMPROVEMENTS_REPORT.md  MASTER_REMEDIATION_PLAN.md  architecture.md  latency_optimizations.md  live.md  log_analyse_02_04.26.md  log_decode_bot_020426_083433.md  section22_live_security_audit.md  simulation.md  strategies.md  update_live_mode.md
ml/: indicators.py  model.py
presets/: b53db864.env
prjBH_hft_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
reports/: diff_b4d55bc9_to_4407e2a8.patch  diff_e4cef82_to_a4dedb46.patch  strategy_plan_intermediate_2026-03-27.md  trade_journal.csv
scripts/: analyze_live_entry_slippage.py  benchmark_clob_latency.py  benchmark_clob_latency.sh  benchmark_feed_latency.md  benchmark_feed_latency.py  benchmark_freshness.py  benchmark_vpn_clob.md  benchmark_vpn_clob.py  benchmark_vpn_clob.sh  country.MD  diagnose_trading_loop.py  plot_feed_lag_alignment.py  run_lag_scenarios.py  test_net_ping.py  verify_stale_blocking.py
tests/: conftest.py  test_adx_incremental_simple.py  test_balance_cache.py  test_binary_book_reconcile.py  test_bot_close_routing.py  test_circuit_breaker.py  test_clob_market_ws.py  (+26 more)
(+71 files in other folders)
