[project]
name = "prjBH-hft-bot"
version = "0.1.0"
description = "Polymarket HFT bot (extracted from prjBJ_arb_polymarket)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "requests>=2.32.5",
    "websockets>=12.0",
    "websocket-client>=1.6.0",
    "py-clob-client>=0.34.6",
    "httpx>=0.27.0",
    "tensorflow>=2.21.0",
    "onnxruntime>=1.24.3",
    "uvloop>=0.19.0 ; sys_platform != 'win32'",
    "astroid>=4.1.2",
    "mypy>=1.20.0",
    "vulture>=2.16",
    "pylint>=2.3.0",
    "pip-audit>=2.10.0",
]

[project.optional-dependencies]
scripts = [
    "matplotlib>=3.8.0",
]

[project.scripts]
hft-bot = "bot:run_cli"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["bot", "bot_main_loop", "bot_config_log", "bot_runtime"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "data*", "ml*", "utils*"]
exclude = ["tests*", "scripts*", "tools*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
