[project]
name = "prjBH-hft-bot"
version = "0.1.0"
description = "Polymarket HFT bot (extracted from prjBJ_arb_polymarket)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.4.4",
    "requests==2.33.1",
    "websockets==16.0",
    "websocket-client==1.9.0",
    "py-clob-client==0.34.6",
    "httpx==0.28.1",
    "tensorflow==2.21.0",
    "onnxruntime==1.24.4",
    "uvloop==0.22.1 ; sys_platform != 'win32'",
]

[project.optional-dependencies]
scripts = [
    "matplotlib==3.10.8",
]

[project.scripts]
hft-bot = "bot:run_cli"

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "astroid==4.1.2",
    "mypy==1.20.0",
    "vulture==2.16",
    "pylint==2.3.0",
    "pip-audit==2.10.0",
    "black==26.3.1",
    "isort==8.0.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["bot", "bot_main_loop", "bot_config_log", "bot_runtime"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "data*", "ml*", "utils*"]
exclude = ["tests*", "scripts*", "tools*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
